--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0",
     "nuxt-property-decorator": "^2.5.0"
   },
