--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@types/jest": "^24.0.25",
+    "@types/js-cookie": "^2.2.4",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
