--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxtjs/auth": "^4.8.5",
     "@nuxtjs/axios": "^5.9.5",
     "@nuxtjs/dotenv": "^1.4.0",
+    "@nuxtjs/toast": "^3.3.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "js-cookie": "^2.2.1",
