--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "js-cookie": "^2.2.1",
-    "nuxt": "^2.0.0",
-    "nuxt-property-decorator": "^2.5.0"
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.5",
@@ -43,6 +42,7 @@
     "eslint-plugin-nuxt": ">=0.4.2",
     "jest": "^24.1.0",
     "ts-jest": "^24.2.0",
+    "vue-class-component": "^7.2.3",
     "vue-jest": "^4.0.0-0"
   }
 }
