--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "js-cookie": "^2.2.1",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-infinite-loading": "^2.4.4"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.5",
