chore(package): @nuxtjs/auth refresh 기능 있는 feat/refresh로 설치 Nuxt.js 인증 모듈이 아직 refreshToken 관련해서 정식 버전이 나오지 않아서 현재 개발이 진행중인 버전으로 재설치

--- a/package.json
+++ b/package.json
@@ -25,8 +25,15 @@
       "^~/(.*)$": "<rootDir>/$1",
       "^vue$": "vue/dist/vue.common.js"
     },
-    "setupFilesAfterEnv": ["./test/jest.setup.ts"],
-    "moduleFileExtensions": ["ts", "js", "vue", "json"],
+    "setupFilesAfterEnv": [
+      "./test/jest.setup.ts"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "vue",
+      "json"
+    ],
     "testRegex": "(test|spec)\\.(jsx?|tsx?)$",
     "transform": {
       "^.+\\.ts?$": "ts-jest",
@@ -41,7 +48,7 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.3.6",
-    "@nuxtjs/auth": "^4.8.5",
+    "@nuxtjs/auth": "github:nuxt-community/auth-module#feat/refresh",
     "@nuxtjs/axios": "^5.9.5",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/toast": "^3.3.0",
