--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "bootstrap-vue": "^2.0.0",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0",
-    "vue-infinite-loading": "^2.4.4"
+    "socket.io-client": "^2.3.0",
+    "vue-infinite-loading": "^2.4.4",
+    "vue-socket.io-extended": "^4.0.1"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.5",
