chore: NPM 스크립트 수정 및 Now 관련 파일 삭제

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "nuxt-ts start",
     "generate": "nuxt-ts generate",
     "lint": "eslint --ext .ts,.js,.vue . --ignore-path .gitignore .",
+    "prestart": "nuxt-ts build",
     "test": "jest"
   },
   "jest": {
