--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     }
   },
   "scripts": {
-    "dev": "nuxt-ts",
+    "dev": "cross-env NODE_ENV=development nuxt-ts",
     "build": "nuxt-ts build",
-    "start": "nuxt-ts start",
+    "start": "cross-env NODE_ENV=production nuxt-ts start",
     "generate": "nuxt-ts generate",
     "lint": "eslint --ext .ts,.js,.vue . --ignore-path .gitignore .",
     "prestart": "nuxt-ts build",
@@ -51,7 +51,6 @@
     "@nuxt/typescript-runtime": "^0.3.6",
     "@nuxtjs/auth": "github:nuxt-community/auth-module#feat/refresh",
     "@nuxtjs/axios": "^5.9.5",
-    "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/toast": "^3.3.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
@@ -63,6 +62,7 @@
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.5",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@types/jest": "^24.0.25",
@@ -70,6 +70,7 @@
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
+    "cross-env": "^7.0.2",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "jest": "^24.1.0",
