--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
+    "@nuxtjs/moment": "^1.6.0",
     "@types/jest": "^24.0.25",
     "@types/js-cookie": "^2.2.4",
     "@vue/test-utils": "^1.0.0-beta.27",
