--- a/package.json
+++ b/package.json
@@ -21,16 +21,15 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.3.6",
-    "@nuxtjs/auth": "github:nuxt-community/auth-module#feat/refresh",
+    "@nuxtjs/auth": "nuxt-community/auth-module#dev",
     "@nuxtjs/axios": "^5.9.5",
     "@nuxtjs/toast": "^3.3.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0",
-    "socket.io-client": "^2.3.0",
     "vue-infinite-loading": "^2.4.4",
-    "vue-socket.io-extended": "^4.0.1"
+    "vue-native-websocket": "^2.0.14"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.5",
