--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap-vue": "^2.0.0",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0",
+    "vee-validate": "^3.2.5",
     "vue-infinite-loading": "^2.4.4",
     "vue-native-websocket": "^2.0.14"
   },
