--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "bootstrap-vue": "^2.0.0",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0",
+    "sockette": "^2.0.6",
     "vee-validate": "^3.2.5",
-    "vue-infinite-loading": "^2.4.4",
-    "vue-native-websocket": "^2.0.14"
+    "vue-infinite-loading": "^2.4.4"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.5",
