feat: Prettier 적용 코드 스타일 및 포매터를 Nuxt 추천 스타일에 맞추어서 Prettier을 적용

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,14 @@
   "parserOptions": {
   },
   "extends": [
-    "@nuxtjs/eslint-config-typescript"
+    "@nuxtjs/eslint-config-typescript",
+    "plugin:nuxt/recommended",
+    "plugin:prettier/recommended",
+    "prettier",
+    "prettier/vue"
+  ],
+  "plugins": [
+    "prettier"
   ],
   "rules": {
   }
