--- a/package.json
+++ b/package.json
@@ -44,9 +44,13 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "cross-env": "^7.0.2",
-    "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-loader": "^4.0.0",
+    "eslint-plugin-nuxt": "^0.5.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "jest": "^24.1.0",
+    "prettier": "^2.0.4",
     "ts-jest": "^24.2.0",
     "vue-class-component": "^7.2.3",
     "vue-jest": "^4.0.0-0"
