fix: Now 2.0으로 수정

--- a/now.json
+++ b/now.json
@@ -1,5 +1,9 @@
 {
-  "src": "nuxt.config.ts",
-  "use": "@nuxtjs/now-builder",
-  "config": {}
+  "builds": [
+    {
+      "src": "nuxt.config.ts",
+      "use": "@nuxtjs/now-builder",
+      "config": {}
+    }
+  ]
 }
