--- a/now.json
+++ b/now.json
@@ -1,9 +1,14 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "nuxt.config.ts",
       "use": "@nuxtjs/now-builder",
-      "config": {}
+      "config": {
+        "tscOptions": {
+          "sourceMap": false
+        }
+      }
     }
   ]
 }
