fix: Edited now.json

--- a/now.json
+++ b/now.json
@@ -6,7 +6,7 @@
       "use": "@nuxtjs/now-builder",
       "config": {
         "tscOptions": {
-          "sourceMap": false
+          "sourceMap": true
         }
       }
     }
